@@ -61,7 +61,8 @@ PDFROFF=\
   ./pdfroff \
   $(FFLAG) $(MFLAG) -dpaper=$(PAGE) -P-p$(PAGE) -M$(pdfmark_srcdir)
 
-contrib/pdfmark/pdfmark.pdf: contrib/pdfmark/pdfmark.ms
+contrib/pdfmark/pdfmark.pdf: contrib/pdfmark/pdfmark.ms \
+  $(TMAC_PACKAGE_MS)
 	$(GROFF_V)$(MKDIR_P) `dirname $@` \
 	&& $(PDFROFF) -I $(doc_builddir) -I $(doc_srcdir) -mspdf \
 	  --stylesheet=$(pdfmark_srcdir)/cover.ms \
