@@ -54,7 +54,8 @@ $(sboxes_builddir)/msboxes.ms: $(SBOXES_EXAMPLEFILES) $(sboxesnotquine)
 	$(AM_V_GEN)mv $@.tmp $@
 
 $(sboxes_builddir)/msboxes.pdf: $(sboxes_builddir)/msboxes.ms \
-  $(dist_sboxestmac_DATA) groff troff gropdf font/devpdf/stamp
+  $(TMAC_PACKAGE_MS) $(dist_sboxestmac_DATA) groff troff gropdf \
+  font/devpdf/stamp
 	$(GROFF_V)$(DOC_GROFF) -M$(sboxes_srcdir) -ms -msboxes -Tpdf \
 	  $(sboxes_builddir)/msboxes.ms > $@
 
