@@ -345,16 +345,16 @@ doc/meintro_fr.ps: doc/meintro_fr.me preconv
 	$(GROFF_V)$(MKDIR_P) `dirname $@` \
 	&& $(DOC_GROFF) -K utf8 -t -Tps -me -mfr $< >$@
 
-doc/ms.ps: $(doc_srcdir)/ms.ms eqn tbl
+doc/ms.ps: $(doc_srcdir)/ms.ms $(TMAC_PACKAGE_MS) eqn tbl
 	$(GROFF_V)$(MKDIR_P) `dirname $@` \
 	&& $(DOC_GROFF) -et -Tps -ms $(doc_srcdir)/ms.ms >$@
 
-doc/pic.ps: $(doc_srcdir)/pic.ms eqn pic tbl
+doc/pic.ps: $(doc_srcdir)/pic.ms $(TMAC_PACKAGE_MS) eqn pic tbl
 	$(GROFF_V)$(MKDIR_P) `dirname $@` \
 	&& $(DOC_GROFF) -pet -Tps -ms $(doc_srcdir)/pic.ms >$@
 
 doc/webpage.ps: $(DOC_GNU_EPS) tmac/www.tmac tbl
-doc/webpage.ps: $(doc_srcdir)/webpage.ms
+doc/webpage.ps: $(doc_srcdir)/webpage.ms $(TMAC_PACKAGE_MS)
 	$(GROFF_V)$(MKDIR_P) `dirname $@` \
 	&& $(DOC_GROFF) -I $(doc_srcdir) -I $(doc_builddir) -t -Tps \
 	  -ms -mwww $(doc_srcdir)/webpage.ms >$@
@@ -366,7 +366,7 @@ doc/webpage.ps: $(doc_srcdir)/webpage.ms
 
 doc/pic.html: eqn pic tbl
 doc/pic.html: tmac/www.tmac
-doc/pic.html: $(doc_srcdir)/pic.ms
+doc/pic.html: $(doc_srcdir)/pic.ms $(TMAC_PACKAGE_MS)
 	$(GROFF_V)$(MKDIR_P) $(doc_builddir) \
 	&& cd $(doc_builddir) \
 	&& $(DOC_GROFF) -pet -P-Ipic -P-Dimg -P-jpic -Thtml -ms \
